kubernetes/manifests/west/hm-nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-ingress-nginx
  namespace: hm
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
